# CFAR

./: .gitignore  CondaPkg.toml  Project.toml  README.md  pyproject.toml  requirements.txt
cluster/scripts/: init.sh
cluster/sub/: check-cuda.sub
dev/: .documenter-siteinfo.json  index.html  objects.inv  search_index.js
dev/examples/: index.html
dev/search/: index.html
docs/: Project.toml  make.jl
docs/examples/: index.md
docs/src/: index.md
notebooks/: README.md
notebooks/0_init/: README.md  basics.ipynb
scripts/: README.md
scripts/0_init/: 3_mlp.ipynb  README.md  check_gpu.py  conda_setup.jl  dev-dist-py.jl  dev_dist.jl  dev_dist_func.jl  mg.jl  sct_gaussians.jl  vis_types.jl
scripts/1_gaussian/: 1_gen_mg.jl  2_art.jl  2_sfam.jl  2a_analyze_art.jl  2a_analyze_sfam.jl  3_mlp.ipynb  3_mlp.jl  3_mlp_single.jl  3a_mlp_single_dist.jl  4_analyze_art.jl  5_analyze_mlp.jl  6_cvi.jl  README.md  conda_setup.jl  dev-dist-py.jl  dev_arrow.jl  mg.jl  utils.py
scripts/2_benchmarks/: 0_dev.jl  1_gen_scenario.jl  2_driver.jl  2_driver_backup.jl  3_l2metrics_julia.jl  4_l2metrics.jl
scripts/3_dist/: all.jl  art.jl  art_analyze.jl  art_dist_analyze.jl  cvi_analyze.jl  mover.jl
scripts/4_knn/: data_dev.jl  knn.jl  knn_analyze.jl
src/: CFAR.jl
src/lib/: constants.jl  data.jl  drivers.jl  experiments.jl  gaussians.jl  lib.jl  (+3 more)
src/mlp/: README.md  setup.cfg  setup.py
src/mlp/mlp/: __init__.py
src/mlp/src/mlp/: __init__.py
test/: runtests.jl  test_sets.jl
v0.0.1/: .documenter-siteinfo.json  index.html  search_index.js
work/: dev-requirements.txt
(+42 files in other folders)
