[metadata]
name = mlp
version = 1.0.0
author = Sasha Petrenko
author_email = petrenkos@mst.com
description = A local Python package in the `CFAR` project for Python MLP driver code.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AP6YC/CFAR
project_urls =
    Bug Tracker = https://github.com/AP6YC/CFAR/issues
    Documentation = https://AP6YC.github.io/CFAR/dev/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    numpy

[options.packages.find]
where = src

[flake8]
# Docstrings and comments should be an exception to line length
max-doc-length = 300
# TODO: Flake8 doesn't seem to respect docstring length
max-line-length = 300
# Exclude these directories for linting
exclude =
    .git,
    __pycache__,
    old,
    build,
    dist,
    _dev
